# hi

./: AGENTS.md  Cargo.toml  README.md
openspec/changes/add-bin-entrypoint-with-clap-tui-command/: design.md  proposal.md  tasks.md
openspec/changes/add-bin-entrypoint-with-clap-tui-command/specs/chat-tui/: spec.md
openspec/changes/add-bin-entrypoint-with-clap-tui-command/specs/root-cli-entrypoint/: spec.md
openspec/changes/add-config-llm-validation-cmd/: design.md  proposal.md  tasks.md
openspec/changes/add-config-llm-validation-cmd/specs/config-llm-validation-command/: spec.md
openspec/changes/add-config-llm-validation-cmd/specs/model-config/: spec.md
openspec/changes/add-cron-heartbeat-tools-for-llm/: design.md  proposal.md  tasks.md
openspec/changes/add-cron-heartbeat-tools-for-llm/specs/llm-cron-management-tools/: spec.md
openspec/changes/add-cron-heartbeat-tools-for-llm/specs/llm-heartbeat-content-editing/: spec.md
openspec/changes/add-hi-remote-telegram-support/: design.md  proposal.md  tasks.md
openspec/changes/add-hi-remote-telegram-support/specs/hi-remote/: spec.md
openspec/changes/add-init-config-template-command/: design.md  proposal.md  tasks.md
openspec/changes/add-init-config-template-command/specs/config-init-command/: spec.md
openspec/changes/add-line-and-utf8-indexed-file-io-tooling/: tasks.md
openspec/changes/add-llm-schedule-view-tool/: tasks.md
openspec/changes/add-log-crate/: design.md  proposal.md  tasks.md
openspec/changes/add-main-config-path-arg/: design.md  proposal.md  tasks.md
openspec/changes/add-main-guided-initial-setup-command/: tasks.md
openspec/changes/add-markdown-hierarchical-memory-tool/: tasks.md
openspec/changes/add-mcp-stdio-http-with-mcp-json-config/: tasks.md
openspec/changes/add-model-pool-slash-command-and-fallback-switching/: tasks.md
openspec/changes/add-openai-compatible-endpoint/: design.md  proposal.md  tasks.md
openspec/changes/add-safe-default-system-prompt-memory-rules/: tasks.md
openspec/changes/add-skills-slash-command-and-prompt-prepend/: tasks.md
openspec/changes/add-telegram-slash-commands-for-cron-heartbeat-management/: proposal.md  tasks.md
openspec/changes/add-telegram-user-id-auth-gate/: tasks.md
openspec/changes/all/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-13-context-injection-optimization/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-13-heartbeat-scheduler-multimodel/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-13-simple-llm-chat/: design.md  proposal.md  tasks.md
openspec/changes/call-malloc-trim-after-large-deallocation/: design.md  proposal.md  tasks.md
openspec/changes/compact-with-small-model/: design.md  proposal.md  tasks.md
openspec/changes/enable-heartbeat-and-scheduler/: design.md  proposal.md  tasks.md
openspec/changes/expose-gemini-thinking-budget/: design.md  proposal.md  tasks.md
openspec/changes/extract-heartbeat-module-add-read-write-tools/: tasks.md
openspec/changes/fix-telegram-typing-indicator-and-markdown-formatting/: design.md  proposal.md  tasks.md
openspec/changes/heartbeat-default-20m-small-model-gate/: tasks.md
openspec/changes/ignore-telegram-timeout/: design.md  proposal.md  tasks.md
openspec/changes/ignore-telegram-timeout/specs/: no-spec-changes.md
openspec/changes/limit-history-messages/: design.md  proposal.md  tasks.md
openspec/changes/persist-heartbeat-cron-memory-index-and-minimal-runtime-context/: tasks.md
openspec/changes/replace-clap-with-argh-and-make-tui-optional/: design.md  proposal.md  tasks.md
openspec/changes/replace-frankenstein-with-teloxide/: design.md  proposal.md  tasks.md
openspec/changes/replace-print-with-log/: design.md  proposal.md  tasks.md
openspec/changes/replace-zstd-with-lz4-flex/: design.md  proposal.md  tasks.md
openspec/changes/save-cron-to-file/: design.md  proposal.md  tasks.md
openspec/changes/split-telegram-long-messages/: tasks.md
openspec/changes/telegram-bot-commands/: design.md  proposal.md  tasks.md
openspec/changes/use-heartbeat-md-for-heartbeat-tasks/: design.md  proposal.md  tasks.md
openspec/specs/builtin-tools/: spec.md
openspec/specs/chat-session/: spec.md
openspec/specs/chat-tui/: spec.md
openspec/specs/heartbeat/: spec.md
openspec/specs/model-config/: spec.md
openspec/specs/multi-model/: spec.md
openspec/specs/skills-loader/: spec.md
package/hi-core/: Cargo.toml
package/hi-core/src/: context.rs  heartbeat.rs  lib.rs  mcp.rs  model_pool.rs  provider.rs  scheduler.rs  session.rs  skills.rs  validate.rs
package/hi-history/: Cargo.toml
package/hi-history/src/: history.rs  lib.rs
package/hi-remote/: Cargo.toml
package/hi-remote/src/: lib.rs  session_manager.rs  telegram.rs
package/hi-tools/: Cargo.toml
package/hi-tools/src/: bash.rs  heartbeat_edit.rs  heartbeat_write.rs  lib.rs  list_files.rs  memory.rs  read_file.rs  read_skills.rs  schedule_add.rs  schedule_remove.rs  schedule_storage.rs  schedule_view.rs  write_file.rs
package/hi-tui/: Cargo.toml
package/hi-tui/src/: lib.rs  main.rs
package/shared/: Cargo.toml
package/shared/src/: config.rs  heartbeat_store.rs  lib.rs  logging.rs  mcp_store.rs  memory.rs  paths.rs  runtime_index.rs  schedule_store.rs
src/: main.rs
(+43 files in other folders)
