[package]
name = "hi-history"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lz4_flex = "0.11"
anyhow = { workspace = true }
rig-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
