[package]
name = "hi-tools"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
croner = "3"

[dev-dependencies]
